--- a/web/css/stylePotencial.css
+++ b/web/css/stylePotencial.css
@@ -16,6 +16,15 @@
     text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.3);
 }
 
+.swal-button--aceptar {
+    padding: 7px 19px;
+    border-radius: 25px;
+    color: #fff;
+    background-color: #007bff;
+    font-size: 15px;
+    text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.3);
+}
+
 .swal-button--cancel {
     padding: 7px 19px;
     border-radius: 25px;
