Correcciones mencionadas por Julián

--- a/web/css/stylePaciente.css
+++ b/web/css/stylePaciente.css
@@ -5,6 +5,35 @@
     GENERALES
 ----------------------------------------------------- */
 
+p.clear {
+    clear: both;
+    color: #fff;
+    text-align: center;
+    margin: auto;
+    padding: 530px 0;
+    font-size: 20px;
+}
+
+#loading-screen {
+  background-color: rgba(25,25,25,0.7);
+  height: 100%;
+  width: 100%;
+  position: fixed;
+  z-index: 9999;
+  margin-top: 0;
+  top: 0;
+  text-align: center;
+}
+#loading-screen img {
+  width: 100px;
+  height: 100px;
+  position: fixed;
+  margin-top: -50px;
+  margin-left: -50px;
+  top: 50%;
+  text-align: center;
+}
+
 .select-Tratamiento , .fecha-Inicio-Tratamiento{
 
     font-size:12.5px;
@@ -143,7 +172,7 @@ li a, li a i{
     padding: 8px;
     border-radius: 4px;
     width: 15%;
-    text-align: center;
+    
 }
 
 .wrapper {
@@ -356,6 +385,11 @@ a.article:hover {
 .tituloMisCitas{
     font-size: 40px;
     color: #696f71;
+}
+
+#myAgregarCitaModal{
+    font-size: 18px;
+    text-align: center;
 }
 
 .ocultaBadge{
