--- a/web/css/styleAdministrador.css
+++ b/web/css/styleAdministrador.css
@@ -5,6 +5,35 @@
     GENERALES
 ----------------------------------------------------- */
 
+p.clear {
+    clear: both;
+    color: #fff;
+    text-align: center;
+    margin: auto;
+    padding: 530px 0;
+    font-size: 20px;
+}
+
+#loading-screen {
+  background-color: rgba(25,25,25,0.7);
+  height: 100%;
+  width: 100%;
+  position: fixed;
+  z-index: 9999;
+  margin-top: 0;
+  top: 0;
+  text-align: center;
+}
+#loading-screen img {
+  width: 100px;
+  height: 100px;
+  position: fixed;
+  margin-top: -50px;
+  margin-left: -50px;
+  top: 50%;
+  text-align: center;
+}
+
 .swal-button--confirm {
     padding: 7px 19px;
     border-radius: 25px;
