--- a/web/css/styleAdministrador.css
+++ b/web/css/styleAdministrador.css
@@ -5,6 +5,49 @@
     GENERALES
 ----------------------------------------------------- */
 
+.btn-actualizarReportePoblacion {
+    display: inline-block;
+    border-radius: 4px;
+    background-color: #CC4452;
+    border: none;
+    color: #FFFFFF;
+    text-align: center;
+    font-size: 16px;
+    padding: 20px;
+    width: 260px;
+    height: 40px;
+    transition: all 0.5s;
+    cursor: pointer;
+    margin: 5px;
+    padding-top: 6px;
+}
+
+.btn-actualizarReportePoblacion span {
+    cursor: pointer;
+    display: inline-block;
+    position: relative;
+    transition: 0.5s;
+}
+
+.btn-actualizarReportePoblacion span:after {
+    content: '\00bb';
+    position: absolute;
+    opacity: 0;
+    top: 0;
+    right: -20px;
+    transition: 0.5s;
+}
+
+.btn-actualizarReportePoblacion:hover span {
+    padding-right: 25px;
+}
+
+.btn-actualizarReportePoblacion:hover span:after {
+    opacity: 1;
+    right: 0;
+}
+
+
 .btn-reportePoblacion {
     display: inline-block;
     border-radius: 4px;
@@ -15,7 +58,7 @@
     font-size: 16px;
     padding: 20px;
     width: 260px;
-    height: 55px;
+    height: 40px;
     transition: all 0.5s;
     cursor: pointer;
     margin: 5px;
