--- a/web/css/styleLogin.css
+++ b/web/css/styleLogin.css
@@ -29,7 +29,7 @@ body {
   justify-content: center;
   padding-top: 40px;
   padding-bottom: 40px;
-  background: url("../img/bg.jpg");
+  background: url("../img/fondo.png");
   height: 100vh;
   background-size: cover;
 }
@@ -113,7 +113,7 @@ p.clear {
   max-width: 450px;
   padding: 50px;
   margin: 0 auto;
-  background: rgba(255,255,255,0.8);
+  background: rgba(255,255,255,0.9);
   -webkit-box-shadow: 1px 0px 29px -9px rgba(0,0,0,0.17);
   -moz-box-shadow: 1px 0px 29px -9px rgba(0,0,0,0.17);
   box-shadow: 1px 0px 29px -9px rgba(0,0,0,0.17);
