--- a/web/css/styleLogin.css
+++ b/web/css/styleLogin.css
@@ -29,7 +29,7 @@ body {
   justify-content: center;
   padding-top: 40px;
   padding-bottom: 40px;
-  background: url("../img/fondo.png");
+  background: url("../img/fondo2.jpg");
   height: 100vh;
   background-size: cover;
 }
