Reasignar y mi cuenta de administrador responsivas

--- a/web/css/styleAdministrador.css
+++ b/web/css/styleAdministrador.css
@@ -5,6 +5,12 @@
     GENERALES
 ----------------------------------------------------- */
 
+button.truncate {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
 .btn-actualizarReportePoblacion {
     display: inline-block;
     border-radius: 4px;
