Mis citas y  mi cuenta de potencial responsive

--- a/web/css/stylePaciente.css
+++ b/web/css/stylePaciente.css
@@ -5,6 +5,12 @@
     GENERALES
 ----------------------------------------------------- */
 
+button.truncate {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
 p.clear {
     clear: both;
     color: #fff;
