--- a/web/css/stylesRegistro.css
+++ b/web/css/stylesRegistro.css
@@ -17,7 +17,7 @@ body {
   justify-content: center;
   padding-top: 40px;
   padding-bottom: 40px;
-  background: url("../img/bg.jpg");
+  background: url("../img/fondo2.jpg");
   height: 100vh;
   background-size: cover;
 }
