--- a/web/css/styleLogin.css
+++ b/web/css/styleLogin.css
@@ -35,11 +35,14 @@ body {
 }
 
 p.clear {
+    position: absolute;
+    top: 50%;
+    width: 100%;
     clear: both;
     color: #fff;
     text-align: center;
     margin: auto;
-    padding: 530px 0;
+    /*padding: 530px 0;*/
     font-size: 20px;
 }
 
@@ -57,7 +60,7 @@ p.clear {
   width: 100px;
   height: 100px;
   position: fixed;
-  margin-top: -50px;
+  margin-top: -105px;
   margin-left: -50px;
   top: 50%;
   text-align: center;
